@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8142 2004/11/29 14:13:40 he Exp $
+$NetBSD: CHANGES,v 1.8143 2004/11/29 14:20:16 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5632,3 +5632,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated p5-BSD-Resource to 1.24 [he 2004-11-29]
 	Updated p5-Archive-Tar to 1.22 [he 2004-11-29]
 	Added jpegpixi-1.0.3 [wiz 2004-11-29]
+	Updated mew to 4.1 [uebayasi 2004-11-29]
